--- a/week8-solidity-deep/FiatToken/foundry.toml
+++ b/week8-solidity-deep/FiatToken/foundry.toml
@@ -4,4 +4,7 @@ out = "out"
 libs = ["lib"]
 auto_detect_solc = true
 
+[rpc_endpoints]
+mainnet = "${MAINNET_RPC_URL}"
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
